# cubrid-test-ai-reporter

./: .gitignore  README.md  analyze_single_tc.sh  example-sql.conf  justfile  main.py  pyproject.toml  sql.conf
test_sql_autoreport/: clone_failed_tc.py  get_failed_tc_list_from_pr.py
