[project]
name = "test-sql-autoreport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32",
]

[tool.setuptools.packages.find]
include = ["test_sql_autoreport*"]

[project.scripts]
get-failed-tc = "test_sql_autoreport.get_failed_tc_list_from_pr:main"
